rns-lang/tests/snapshots/diagnostic/err-parser-class_directive-header-name-string_literal_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class  "HelloWorld"
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: expected class name
   ╭─[ test_data/diagnostic/err/parser/class_directive/header/name/string_literal_as_class_name.ja:1:9 ]
   │
 1 │ .class  "HelloWorld"
   │         ──────┬─────  
   │               ╰─────── found 'HelloWorld' instead
   │ 
   │ Note: Consider removing the quotes around the class name
───╯
