rns-lang/tests/snapshots/diagnostic/err-parser-class_directive-header-trailing_tokens-dot_annotation.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public HelloWorld .annotation visible
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: unexpected directive after class name
   ╭─[ test_data/diagnostic/err/parser/class_directive/header/trailing_tokens/dot_annotation.ja:1:26 ]
   │
 1 │ .class public HelloWorld .annotation visible
   │                          ─────────┬─────────  
   │                                   ╰─────────── must start on a new line
   │ 
   │ Note: Consider starting a new line for the '.annotation' directive.
───╯
